Add value to select

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <body>
     <main class="main">
       <h1 class="title">Los Anillos del Poder</h1>
-      <h2 class="title_sub">Eres un jugador del ejercito del bien, no olvides tu misión de ganar la batalla.</h2>
+      <h2 class="title-sub">Eres un jugador del ejercito del bien, no olvides tu misión de ganar la batalla.</h2>
       <form>
         <legend class="legend-text">Elije tu luchador!</legend>
         <select class="select js-select">
-          <option value="">Raza 1: Pelosos con fuerza (1)</option>
-          <option value="">Raza 2: Sureños con fuerza (1)</option>
-          <option value="">Raza 3: Enanos con fuerza (1)</option>
-          <option value="">Raza 4: Númenóreanos con fuerza (1)</option>
-          <option value="">Raza 5: Elfos con fuerza (1)</option>
+          <option value="Raza 1: Pelosos con fuerza (1)">Raza 1: Pelosos con fuerza (1)</option>
+          <option value="Raza 2: Sureños con fuerza (1)">Raza 2: Sureños con fuerza (1)</option>
+          <option value="Raza 3: Enanos con fuerza (1)">Raza 3: Enanos con fuerza (1)</option>
+          <option value="Raza 4: Númenóreanos con fuerza (1)">Raza 4: Númenóreanos con fuerza (1)</option>
+          <option value="Raza 5: Elfos con fuerza (1)">Raza 5: Elfos con fuerza (1)</option>
         </select>
         <button class="btn battle js-btn-battle">Batalla</button>
         <button class="btn restart hidden js-btn-restart">Reiniciar Juego</button>
