--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <form>
         <legend class="legend-text">Elije tu luchador!</legend>
         <select class="select js-select">
-          <option value="Raza 1: Pelosos con fuerza (1)">Raza 1: Pelosos con fuerza (1)</option>
-          <option value="Raza 2: Sureños con fuerza (1)">Raza 2: Sureños con fuerza (1)</option>
-          <option value="Raza 3: Enanos con fuerza (1)">Raza 3: Enanos con fuerza (1)</option>
-          <option value="Raza 4: Númenóreanos con fuerza (1)">Raza 4: Númenóreanos con fuerza (1)</option>
-          <option value="Raza 5: Elfos con fuerza (1)">Raza 5: Elfos con fuerza (1)</option>
+          <option value="1">Raza 1: Pelosos con fuerza (1)</option>
+          <option value="2">Raza 2: Sureños con fuerza (2)</option>
+          <option value="3">Raza 3: Enanos con fuerza (3)</option>
+          <option value="4">Raza 4: Númenóreanos con fuerza (4)</option>
+          <option value="5">Raza 5: Elfos con fuerza (5)</option>
         </select>
         <button class="btn battle js-btn-battle">Batalla</button>
         <button class="btn restart hidden js-btn-restart">Reiniciar Juego</button>
