--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
         <button class="btn battle js-btn-battle">Batalla</button>
         <button class="btn restart hidden js-btn-restart">Reiniciar Juego</button>
         <h3 class="start-battle-text js-start-battle">¡Comienza la batalla!</h3>
+        <p>Numero de batallas: <span class="js-number-battles">0</span></p>
         <h4 class="points">Puntuaciones</h4>
         <div class="players">
           <p>Jugador: <span class="player-score">0</span></p>
-          <p>Computadora: <span class="player-score">0</span></p>
+          <p>Computadora: <span class="computer-score">0</span></p>
         </div>
       </form>
     </main>
