--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Los Anillos del Poder</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <main class="main">
@@ -31,6 +31,6 @@
         </div>
       </form>
     </main>
-    <script src="main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
