--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <h4 class="points">Points</h4>
       </div>
       <div class="players">
-        <p>Player: <span class="player-score">0</span></p>
-        <p>Computer: <span class="computer-score">0</span></p>
+        <p>Army of Good: <span class="player-score">0</span></p>
+        <p>Sauron's Army: <span class="computer-score">0</span></p>
       </div>
     </main>
     <script src="./js/main.js"></script>
